done with tutorial outline

--- a/_posts/2025-03-13-P1Week1.md
+++ b/_posts/2025-03-13-P1Week1.md
@@ -216,10 +216,35 @@ solution: https://github.com/aidankeighron/Falling-Sand-Tutorial/tree/solution
 Rock it just and extension of the base particle class with a different color and name and nothing else (you don't even need to define update or
 swap functions because it inherits it from particle) DO NOT have them just create empty functions, explain the inheritance
 
-Dirt inherits from Sand, you just need to change the color and title, the inheritance will copy the update and 
+Dirt inherits from Sand, you just need to change the color and title, the inheritance will copy the update and swap function (explain this)
 
 # Have water convert dirt into grass
 
+Create grass it inherits from sand, don't give them the code for this. In the update function for water before anything
+else happens check if the particle below is dirt and if it is, remove the water and replace the dirt with grass:
+
+```js
+// Make water turn dirt into grass when it touches it
+if (getParticle(row+1, col)?.type == "dirt") {
+    // Remove water and change dirt to grass
+    setParticle(row+1, col, new Grass());
+    setParticle(row, col, null);
+    return;
+}
+```
+
 # Expand
 
+Add x new particles.
 
+Some suggestions and how they work
+
+Fire:
+In the particle class add a property called duration, and one called maxDuration, every time update is called increase duration, max duration
+should be initialized in the constructor using a random number between x, and y. Fire works like water but moving up instead of down. And after the
+duration has ended it is removed. Show code examples of duration system?
+
+Steam:
+Moves like water but upwards, has a very small chance to disappear, if it is at the top of the screen it has a change to turn into water.
+
++ Many more
