Removed warning on FocusTube tutorial

--- a/_posts/2025-07-07-FocusTube-2.md
+++ b/_posts/2025-07-07-FocusTube-2.md
@@ -586,8 +586,7 @@ export default function PlaylistPage({ params }) {
                     alt={p.snippet.title}
                     width={160}
                     height={120}
-                    className="rounded-md shrink-0 object-fill"
-                    style={{ width: '160px', height: '120px' }}
+                    className="rounded-md shrink-0 object-fill w-40 h-30"
                 />
                 <div className="xflex flex-col justify-start h-full p-3">
                     <h2 className="text-lg font-semibold leading-tight mb-1"> {p.snippet.title} </h2>
