fixed up series and topics issue

--- a/_posts/2025-06-18-FocusTube-1.md
+++ b/_posts/2025-06-18-FocusTube-1.md
@@ -2,8 +2,8 @@
 title: FocusTube pt. 1
 author: johnny
 date: 2025-6-18 12:00:00 +0800
-tags: [FocusTube]
-categories: [JavaScript, React, NextJS, FocusTube, Medium]
+categories: [FocusTube]
+tags: [JavaScript, React, NextJS, FocusTube, Medium]
 description: In this project you will learn the basics of NextJS to start building a YouTube wrapper that will help you focus and not stay distracted
 comments: false
 pin: true
