--- a/_posts/2025-07-07-FocusTube-2.md
+++ b/_posts/2025-07-07-FocusTube-2.md
@@ -2,8 +2,8 @@
 title: FocusTube pt. 2
 author: johnny
 date: 2025-7-7 12:00:00 +0800
-tags: [FocusTube]
-categories: [JavaScript, React, NextJS, Medium]
+categories: [FocusTube]
+tags: [JavaScript, React, NextJS, Medium]
 description: In this project you will continue to learn the fundamentals of NextJS and start learning about APIs in order to make a youtube clone/wrapper that removes the distracting algorithms that hook you in.
 comments: false
 pin: true
